--- a/test file.css
+++ b/test file.css
@@ -1,5 +1,5 @@
 
-/*  CJust another file to test on GIT by uploading changes  */
+/*  Just another file to test on GIT by uploading changes  */
  
 body {
 	color: #ffffff;
